delay and batch calls to StartListeningFormulaCells() (tdf#132165)

This is pretty much the same as tdf#133302.

Change-Id: I5325b90601f503e572faefc455a38e0f5b055bbf