sc/inc/scopetools.hxx
@@ -82,6 +82,7 @@ class DelayStartListeningFormulaCells
 public:
     DelayStartListeningFormulaCells(ScColumn& column, bool delay);
     DelayStartListeningFormulaCells(ScColumn& column);
+    DelayStartListeningFormulaCells(const DelayStartListeningFormulaCells&) = delete;
     ~DelayStartListeningFormulaCells();
     void set();
 };
